<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inscricao"
            android:icon="@drawable/ic_action_inscricao"
            android:title="@string/increvase"
            />
        <item
            android:id="@+id/nav_programacao"
            android:icon="@drawable/ic_menu_programacao"
            android:title="@string/programacao" />
        <item
            android:id="@+id/nav_patrocinadores"
            android:icon="@drawable/ic_action_group"
            android:title="@string/colaboradores" />
    </group>

    <item android:title="@string/contato">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_action_rate"
                android:title="@string/avalie" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_sendemail"
                android:title="@string/sugestoes" />
        </menu>
    </item>

</menu>